--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<h1> Java Home Ansible Demo !!</h1>
+<marquee> Learning DevOps </marquee>
+<b> Testing Jenkins-Ansible connection </b>
+<h1> Welcome to my world !!</h1>
